header wrap fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,9 +33,20 @@ body {
 @media (min-width: 768px) {
   #logo a {
     font-size: 26px;
+    min-width: 254px;
   }
   .honourslist {
     border-left: 5px solid #eee;
+  }
+}
+@media (min-width: 1280px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1240px;
   }
 }
 @media (min-width: 1400px) {
@@ -45,7 +56,7 @@ body {
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 1260px;
+    max-width: 1280px;
   }
 }
 .un1 {
